修正请求头错误，host格式有问题导致400